# varphi-devkit

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  hatch_build.py  pyproject.toml
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  manual-release.yml  pipeline.yml  pr-title-check.yml  publish-to-pypi.yml  release.yml
grammar/: Varphi.g4
scripts/: build.py
src/varphi_devkit/: Varphi.g4  __init__.py  compilation.py  compiler.py  exceptions.py  model.py
src/varphi_devkit/antlr/: Varphi.interp  VarphiLexer.interp  VarphiLexer.py  VarphiLexer.tokens  VarphiListener.py  VarphiParser.py
src/varphi_devkit/parser/: Varphi.interp  Varphi.tokens  VarphiLexer.interp  VarphiLexer.py  VarphiListener.py  VarphiParser.py  __init__.py
src/varphi_devkit/syntax/: Varphi.g4  __init__.py  error_listener.py
src/varphi_devkit/syntax/antlr/: VarphiLexer.py  VarphiListener.py  VarphiParser.py  __init__.py
tests/: ToyCompiler.py  test_devkit.py  test_empty_checker.py  test_line_counter.py  test_syntax_errors.py  test_unique_state_name_lister.py
tests/toy_compilers/: EmptyChecker.py  LineCounter.py  UniqueStateNameLister.py  __init__.py
