[project]
name = "varphi-devkit"
version = "2.0.1"
description = "Development kit for the Varphi language"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
]
authors = [
    { name = "varphi", email = "support@varphi-lang.com" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.force-include]
"src/varphi_devkit/parser" = "src/varphi_devkit/parser"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]