[project]
name = "varphi-devkit"
version = "2.0.2"
description = "Development kit for the Varphi language"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
]
authors = [
    { name = "Hassan El-Sheikha", email = "hassan.elsheikha@utoronto.ca" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build]
artifacts = [
    "src/varphi_devkit/parser/VarphiLexer.py",
    "src/varphi_devkit/parser/VarphiParser.py",
    "src/varphi_devkit/parser/VarphiListener.py",
    "src/varphi_devkit/parser/*.tokens",
    "src/varphi_devkit/parser/*.interp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]