[project]
name = "varphi-devkit"
version = "2.0.5"
description = "A framework for building compilers, interpreters, and analysis tools for the Varphi language."
readme = "README.md"
authors = [
    { name = "Varphi", email = "support@varphi-lang.com" }
]
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "antlr4-tools>=0.2.2",
    "black>=25.12.0",
    "pytest>=9.0.2",
]
